--- a/sale.html
+++ b/sale.html
@@ -168,7 +168,7 @@
               <div class="col-1"></div>
               <div class="col-4 text-left text-muted dropdown">ของออกจาก :
                 <div class="btn-group">
-                  <select id="branch" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <select id="branch" type="button" class="btn btn-secondary dropdown-toggle" aria-haspopup="true" aria-expanded="false">
               
                   </select>
                 </div>
