--- a/sale.html
+++ b/sale.html
@@ -910,6 +910,7 @@
 
       jsonObj[arg-1].amount =  $('#amount-'+arg).val();
       jsonObj[arg-1].total =  $('#total-'+arg).val();
+      jsonObj[arg-1].price =  $('#price-'+arg).val();
       jsonObj[arg-1].discount =  dis;
 
       sum = sum-total_old+parseFloat($('#total-'+arg).val());
